--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
                         <span class="inline-block px-3 py-1 bg-pink-500/20 text-pink-400 text-xs rounded-full mb-3">Repuestos · B2B</span>
                         <h3 class="text-xl font-bold mb-2">Landing para empresa de repuestos</h3>
                         <p class="text-gray-400 text-sm mb-4">Diseño enfocado en generar confianza y facilitar el contacto B2B.</p>
-                        <a href="#" class="text-pink-500 hover:text-pink-400 font-semibold text-sm inline-flex items-center gap-1">
-                            Ver landing →
+                        <a href="https://zamusacorp.com" target="_blank" class="text-pink-500 hover:text-pink-400 font-semibold text-sm inline-flex items-center gap-1">
+                        Ver landing →
                         </a>
                     </div>
                 </div>
